--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -591,9 +591,9 @@ mae
 
 Specific import functions are provided for:
 
--   Biom files (see `help(mia::loadFromBiom)`)
--   QIIME2 files (see `help(mia::loadFromQIIME2)`)
--   Mothur files (see `help(mia::loadFromMothur)`)
+-   Biom files (see `help(mia::importBIOM)`)
+-   QIIME2 files (see `help(mia::importQIIME2)`)
+-   Mothur files (see `help(mia::importMothur)`)
 
 #### Biom import
 
@@ -621,7 +621,7 @@ Now we can read in the biom file and convert it into a TreeSE object. In additio
 library(mia)
 
 # read biom and convert it to TreeSE
-tse <- loadFromBiom(biom_file_path,
+tse <- importBIOM(biom_file_path,
                     rankFromPrefix = TRUE,
                     removeTaxaPrefixes = TRUE)
 
@@ -747,5 +747,5 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 * [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSummarizedExperimentFromDADA2.html)  
 * [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)  
-* [loadFromMetaphlan](https://microbiome.github.io/mia/reference/loadFromMetaphlan.html)  
-* [readQZA](https://microbiome.github.io/mia/reference/loadFromQIIME2.html)
+* [importMetaphlan](https://microbiome.github.io/mia/reference/importMetaphlan.html)  
+* [importQZA](https://microbiome.github.io/mia/reference/importQIIME2.html)
